# djrest-vuejs-example

./: README.md
backend/: pyproject.toml  run.py  shell.py
backend/api/: admin.py
backend/api/dev/: breads_admin.py  meats_admin.py  options_admin.py  order_admin.py  orders_admin.py
backend/api/migrations/: 0001_initial.py  0002_alter_bread_created_alter_bread_updated_and_more.py  0002_meat.py  0003_order.py  0004_option.py
backend/api/models/: base.py  breads.py  meats.py  options.py  orders.py
backend/api/routers/: routers.py
backend/api/serializers/: breads_serializer.py  meats_serializer.py  options_serializer.py  orders_serializer.py
backend/api/urls/: breads_url.py  routers.py  urls.py
backend/api/views/: breads_view.py  meats_view.py  options_view.py  orders_view.py
backend/backend/: urls.py
backend/backend/settings/: base.py
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.vue  axios-api.js
frontend/src/components/: Banner.vue  BurgerForm.vue  Footer.vue  Navbar.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/views/: HomeView.vue
